# Esterv.Video.SecurityCamera

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.github/workflows/: code-format.yml  codeFormat.yml  conf-build-test-install.yml  qml-lint.yml
android/: AndroidManifest.xml  android_release.keystore
android/res/values/: ic_launcher_background.xml
qml/: Client.qml  client.qml
src/: camera_service.cpp  camera_service.hpp  client.cpp  main.cpp  server.cpp  tcp_client.cpp  tcp_client.hpp  tcp_server.cpp  tcp_server.hpp
wasm/: index.html
wasm/js/: scripts.js
